Add Slug, Make slug generator encoder robust, add tests

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -6,8 +6,7 @@ redis {
   port = ${?PORT}
 }
 
-slugGeneratorConfig {
-  alphabet = "abcdefghijklmnopqrstuvwxyz"
+slugGeneratorOptions {
   alphabet = ${?ALPHABET}
 }
 
