--- a/.github/workflows/default-branch.yml
+++ b/.github/workflows/default-branch.yml
@@ -10,7 +10,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Set up scala environment
-        uses: ./.github/actions/setup
-      - name: Run unit-tests
-        run: sbt test
+      - name: unit Test
+        run: ./.github/actions/unit-test
