--- a/.github/workflows/default-branch.yml
+++ b/.github/workflows/default-branch.yml
@@ -10,5 +10,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: unit Test
+      - name: Unit Test
         run: ./.github/actions/unit-test
