--- a/.github/workflows/default-branch.yml
+++ b/.github/workflows/default-branch.yml
@@ -11,4 +11,4 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Unit Test
-        run: ./.github/actions/unit-test
+        uses: ./.github/actions/unit-test
