--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -6,14 +6,6 @@ redis {
   port = ${?PORT}
 }
 
-slugGeneratorOptions {
-  alphabet = ${?ALPHABET}
-}
-
-counterKey = "counterKey"
-counterKey = ${?COUNTERKEY}
-
-
 server {
   # The server port.
   port = 8080
@@ -23,3 +15,9 @@ server {
   url = ${?HOSTNAME_URL}
 }
 
+slugGenerator {
+  alphabet = ${?ALPHABET}
+
+  counterKey = "counterKey"
+  counterKey = ${?COUNTERKEY}
+}
